Autowired annotation replaced.